--- a/Mini_Project_Clustering.ipynb
+++ b/Mini_Project_Clustering.ipynb
@@ -1363,7 +1363,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-info\">\n",
     "<h3>Checkup Exercise Set IV</h3>\n",
     "\n",
     "<p><b>Exercise:</b> Use PCA to plot your clusters:</p>\n",
@@ -1386,7 +1385,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#your turn\n",
@@ -1669,11 +1670,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"span5 alert alert-info\">\n",
     "<h3>Checkup Exercise Set IV</h3>\n",
     "\n",
-    "<p><b>Exercise:</b> Now look at both the original raw data about the offers and transactions and look at the fitted clusters. Tell a story about the clusters in context of the original data. For example, do the clusters correspond to wine variants or something else interesting?</p>\n",
-    "</div>"
+    "<p><b>Exercise:</b> Now look at both the original raw data about the offers and transactions and look at the fitted clusters. Tell a story about the clusters in context of the original data. For example, do the clusters correspond to wine variants or something else interesting?</p>"
    ]
   },
   {
